adding tests and working documentation
