# src/main/java/com/postech/aura_ms_product/gateway/database/jpa/entity/ProductEntity.java
@@ -1,33 +1,0 @@
-package com.postech.aura_ms_product.gateway.database.jpa.entity;
-
-import jakarta.persistence.*;
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Data;
-import lombok.NoArgsConstructor;
-
-import java.math.BigDecimal;
-
-@Entity
-@Table(name = "product")
-@Data
-@Builder
-@NoArgsConstructor
-@AllArgsConstructor
-public class ProductEntity {
-    @Id
-    @GeneratedValue(strategy = GenerationType.IDENTITY)
-    private Long id;
-
-    @Column(nullable = false, length = 100)
-    private String name;
-
-    @Column(nullable = false, unique = true)
-    private String sku;
-
-    @Column(nullable = false, precision = 10, scale = 2)
-    private BigDecimal price;
-
-    @Column(columnDefinition = "TEXT")
-    private String description;
-}
